force-app/main/default/objects/Desk__c/fields/Desk_No__c.field-meta.xml
<CustomField>
    <fullName>Desk_No__c</fullName>
    <label>Desk No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>