force-app/main/default/objects/Desk__c/fields/Floor__c.field-meta.xml
<CustomField>
    <fullName>Floor__c</fullName>
    <label>Floor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floor 1</fullName>
            </value>
            <value>
                <fullName>Floor 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>