force-app/main/default/objects/Desk__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Desk</relationshipLabel>
    <relationshipName>Desk</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>